New tools feature

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -196,6 +196,7 @@ next.{% endblock %}
             <a href="#feature" class="cta-primary">See Today’s Briefing</a>
             <a href="/escape/play" class="main-btn">Play Daily Escape</a>
             <a href="/roulette" class="main-btn">Play Timeline Roulette</a>
+            <a href="/tools" class="main-btn">Tools Hub</a>
 
         </div>
     </section>
